--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h3 class="title">Page Title h3</h3>
         <h4 class="title">Page Title h4</h4>
         <h5 class="title">Page Title h5</h5>
+        <h6 class="title">Page Title h6</h6>
 
         <p class="title blue large">My first paragraph (p)</p>
 
