feat: control structures

--- a/learning-javascript/index.html
+++ b/learning-javascript/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Javascript</title>
-    <script src="script.js"></script>
+    <!-- Scripts on the head section can result to slower page loads -->
 </head>
 <body>
     <h1>Learning Javascript</h1>
+
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
