feat: add images

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -157,6 +157,7 @@
                 todos.forEach((todo) => {
                     const html = `
                     <div class="card">
+                        <img src="https://picsum.photos/id/${todo.id + 11}/1600/900" class="card-img-top" alt="...">
                         <div class="card-body">${todo.id}.) ${todo.title}</div>
                     </div>
                     `;
